# AutoFarm

./: .gitignore  docker-compose.yml  manager.py  model.keras  pyproject.toml  tentar.py
app/: Dockerfile
app/src/: database.py
app/src/ml/: autoencoder.py
app/src/models/: __init__.py  autofarm.py  autofarmbase.py
app/src/normalize/: __init__.py  pontual_change.py
appFarm/: first.py  manager.py  second.py
appFarm/src/: calllback.py  socket_connect.py
