[tool.poetry]
name = "autofarm"
version = "0.1.0"
description = ""
authors = ["VitorDan <vitordan9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.3"
plotly = "^5.18.0"
pymongo = "^4.6.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
